# steventhesis

./: CMakeLists.txt  CMakeLists.txt~  README.md
BTSimple/: CMakeLists.txt  CMakeLists.txt~  ci_behavior.h  ci_behavior_controller.h  ci_robot_data.h  ci_robot_state.cpp  ci_robot_state.h
BTSimple/swarmanoid/: ci_swarmanoid_robot_state.cpp  ci_swarmanoid_robot_state.h
BTSimple/utility_classes/: CMakeLists.txt  CMakeLists.txt~  helper.h
behaviors/: CMakeLists.txt  CMakeLists.txt~  bt_footbot_RAB_signal.cpp  bt_footbot_RAB_signal.h  bt_footbot_beacon.cpp  bt_footbot_beacon.h  bt_footbot_control_leds.cpp  bt_footbot_control_leds.h  bt_footbot_go_to_led.cpp  bt_footbot_go_to_led.h  bt_footbot_motion_control.cpp  bt_footbot_motion_control.h  bt_footbot_motion_control2.h  bt_footbot_observe_ground.cpp  bt_footbot_observe_ground.h  bt_footbot_obstacle_avoidance.cpp  bt_footbot_obstacle_avoidance.h  bt_footbot_odometry.cpp  bt_footbot_odometry.h  bt_footbot_phototaxis.cpp  bt_footbot_phototaxis.h  bt_footbot_randomwalk.cpp  bt_footbot_randomwalk.h
behaviors/bak/: bt_footbot_motion_control.cpp  bt_footbot_motion_control2.cpp
behaviors/bak2/: bt_footbot_motion_control.cpp  bt_footbot_motion_control.h
controllers/: CMakeLists.txt
controllers/combined/: CMakeLists.txt  bt_footbot_combined_root_behavior.cpp  bt_footbot_combined_root_behavior.h
controllers/combined_novis/: CMakeLists.txt  bt_footbot_combined_novis_controller.cpp  bt_footbot_combined_novis_controller.h
controllers/exp1/: CMakeLists.txt  bt_footbot_exp1_controller.cpp  bt_footbot_exp1_controller.h  bt_footbot_exp1_root_behavior.cpp  bt_footbot_exp1_root_behavior.h
controllers/exp2/: bt_footbot_exp2_root_behavior.cpp
controllers/randomforaging/: CMakeLists.txt  bt_footbot_randomforaging_controller.cpp  bt_footbot_randomforaging_controller.h  bt_footbot_randomforaging_root_behavior.cpp  bt_footbot_randomforaging_root_behavior.h
controllers/recruitee/: bt_footbot_recruitee_controller.h  bt_footbot_recruitee_root_behavior.cpp  bt_footbot_recruitee_root_behavior.h
controllers/recruiter/: CMakeLists.txt  bt_footbot_recruiter_controller.cpp  bt_footbot_recruiter_controller.h  bt_footbot_recruiter_root_behavior.cpp
controllers/recruitment/: CMakeLists.txt  bt_footbot_recruitment_controller.cpp  bt_footbot_recruitment_controller.h  bt_footbot_recruitment_root_behavior.cpp  bt_footbot_recruitment_root_behavior.h
controllers/simple/: CMakeLists.txt~  bt_footbot_simple_controller.cpp  bt_footbot_simple_controller.h  bt_footbot_simple_root_behavior.cpp  (+1 more)
controllers/template/: CMakeLists.txt  bt_footbot_template_controller.cpp  bt_footbot_template_controller.h  bt_footbot_template_root_behavior.cpp  bt_footbot_template_root_behavior.h
garesults/: mixedPatched0.csv  mixedPatched1.csv  mixedPatched12.csv  mixedPatched16.csv  mixedPatched17.csv  mixedPatched20.csv  mixedPatched21.csv  mixedPatched22.csv  mixedPatched23.csv  mixedPatched24.csv  mixedPatched26.csv  mixedPatched27.csv  mixedPatched28.csv  mixedPatched30.csv  mixedPatched34.csv  mixedPatched35.csv  mixedPatched37.csv  mixedPatched41.csv  mixedPatched44.csv  mixedPatched46.csv  mixedPatched47.csv  mixedPatched48.csv  mixedPatched49.csv  mixedPatched50.csv  mixedPatched56.csv  mixedPatched57.csv  mixedPatched9.csv  mixedPatchedOdom52.csv  mixedUniform1.csv  mixedUniform10.csv  mixedUniform13.csv  mixedUniform14.csv  mixedUniform15.csv  mixedUniform16.csv  mixedUniform19.csv  mixedUniform21.csv  mixedUniform22.csv  mixedUniform26.csv  mixedUniform27.csv  mixedUniform28.csv  (+99 more)
loop_functions/: CMakeLists.txt  recruitment_loop_functions.cpp  recruitment_loop_functions.h  recruitment_qt_user_functions.cpp  recruitment_qt_user_functions.h
loop_functions/backup/combined_novis/: combined_novis_loop_functions.cpp  combined_novis_loop_functions.h
loop_functions/combined/: CMakeLists.txt  combined_loop_functions.cpp  combined_loop_functions.h  combined_qt_user_functions.cpp  combined_qt_user_functions.h
loop_functions/combined_novis/: CMakeLists.txt  combined_novis_loop_functions.cpp  combined_novis_qt_user_functions.cpp  combined_novis_qt_user_functions.h
loop_functions/exp1/: CMakeLists.txt  exp1_loop_functions.cpp  exp1_loop_functions.h
loop_functions/exp1.bak/: exp1_loop_functions.cpp  exp1_loop_functions.h  exp1_qt_user_functions.cpp
loop_functions/recruiter/: CMakeLists.txt  recruiter_loop_functions.cpp  recruiter_loop_functions.h  recruiter_qt_user_functions.cpp  recruiter_qt_user_functions.h
loop_functions/recruitment/: CMakeLists.txt  recruitment_loop_functions.cpp  recruitment_loop_functions.h  recruitment_qt_user_functions.cpp  recruitment_qt_user_functions.h
loop_functions/simple/: CMakeLists.txt  simple_loop_functions.cpp  simple_loop_functions.h  simple_qt_user_functions.cpp  simple_qt_user_functions.h
loop_functions/template/: CMakeLists.txt  exp1_loop_functions.cpp  exp1_loop_functions.h  exp1_qt_user_functions.h
results/: boxplots.m  collectedItems.txt  combined_patched_10.csv  combined_patched_100.csv  combined_patched_1000.csv  combined_patched_10000.csv  combined_patched_10_uniform.ods  combined_uniform_100.csv  combined_uniform_1000.csv  ga0.csv  ga1.csv  ga2.csv  ga3.csv  mixedPatched10.csv  mixedPatched11.csv  mixedPatched13.csv  mixedPatched14.csv  mixedPatched15.csv  mixedPatched17.csv  mixedPatched18.csv  mixedPatched19.csv  mixedPatched2.csv  mixedPatched25.csv  mixedPatched29.csv  mixedPatched3.csv  mixedPatched31.csv  mixedPatched32.csv  mixedPatched33.csv  mixedPatched36.csv  mixedPatched38.csv  mixedPatched39.csv  mixedPatched4.csv  mixedPatched40.csv  mixedPatched42.csv  mixedPatched43.csv  mixedPatched45.csv  mixedPatched5.csv  mixedPatched51.csv  mixedPatched52.csv  mixedPatched53.csv  (+110 more)
xml/: combined_patched_no_vis.argos  combined_uniform_no_vis.argos  exp1.argos  exp1.argos.bak  exp2.argos  expCombined.argos  ga.argos  ga_vis.argos  recruitment.argos  simple.argos  simple.argos~  solitary_patched_no_vis.argos  solitary_uniform.argos  solitary_uniform_no_vis.argos  tester_combined.argos  tester_solitary.argos
(+165 files in other folders)
