link_directories(${CMAKE_BINARY_DIR}/problem/controllers/randomforaging)
set(recruitment_loop_functions_SOURCES recruitment_loop_functions.cpp)

include(ARGoSCheckQTOpenGL)
if(ARGOS_COMPILE_QTOPENGL)
  set(recruitment_loop_functions_SOURCES
    ${recruitment_loop_functions_SOURCES}
    recruitment_qt_user_functions.cpp)
endif(ARGOS_COMPILE_QTOPENGL)

add_library(recruitment_loop_functions MODULE ${recruitment_loop_functions_SOURCES})
target_link_libraries(recruitment_loop_functions
  bt_footbot_simple
  argos3core_simulator
  argos3plugin_simulator_actuators
  argos3plugin_simulator_dynamics2d
  argos3plugin_simulator_entities
  argos3plugin_simulator_footbot
  argos3plugin_simulator_genericrobot
  argos3plugin_simulator_media
  argos3plugin_simulator_sensors)

if(ARGOS_COMPILE_QTOPENGL)
target_link_libraries(recruitment_loop_functions argos3plugin_simulator_qtopengl)
endif(ARGOS_COMPILE_QTOPENGL)
